Works with src and test

--- a/www/index.html
+++ b/www/index.html
@@ -5,5 +5,6 @@
         <p>Join Trivial Game</p>
         <button id="join">Join</button>
     </body>
+    <script>var exports = {}; </script>
     <script src="build/index.js"></script>
 </html>
