--- a/www/index.html
+++ b/www/index.html
@@ -6,5 +6,5 @@
         <button id="join">Join</button>
     </body>
     <script>var exports = {}; </script>
-    <script src="build/index.js"></script>
+    <script type="module" src="build/index.js"></script>
 </html>
