I have something to start!!

--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,16 @@
 <html>
     <head>
+        <style>
+            .question {
+                margin-top: 2em;
+            }
+        </style>
     </head>
     <body>
-        <p>Join Trivial Game</p>
+        <h3>Join Trivial Game</h3>
         <button id="join">Join</button>
+        <div id="question" class="question">
+        </div>
     </body>
     <script>var exports = {}; </script>
     <script type="module" src="build/index.js"></script>
