--- a/www/html/index.html
+++ b/www/html/index.html
@@ -13,5 +13,5 @@
         </div>
     </body>
     <script>var exports = {}; </script>
-    <script type="module" src="build/index.js"></script>
+    <script type="module" src="./index.js"></script>
 </html>
